--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -26,10 +26,10 @@
         <ImageView
             android:id="@+id/imagePreview"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:scaleType="fitCenter"
+            android:layout_height="160dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_grocery"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/fruits" />
 
         <Button
             android:id="@+id/uploadImageBtn"
