--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,7 @@
         android:layout_height="120dp"
         android:layout_marginTop="24dp"
         android:contentDescription="app logo"
-        android:src="@drawable/ic_grocery"
+        android:src="@drawable/ic_app"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
