--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#53B175</color>
-    <color name="grey">#D9D9D9</color>
+    <color name="green">#3F986B</color>
+    <color name="lightgreen">#CDF3DA</color>
+    <color name="grey">#A1A1A1</color>
 
 </resources>
